@@ -74,6 +74,18 @@ void *client_connect(void)
 	  fprintf(stderr, "client_connect: warning: config_begin failed\n");
 
    /*
+	  Disabled check
+   */
+
+   str = config_fetch_by_name(config, "Server", "Disable");
+   if ((str) && (*str)) {
+	  if (!(strcasecmp(str, "True"))) {
+		 config_kill(config);
+		 return NULL;
+	  }
+   }
+
+   /*
 	  Get timeout
    */
 
@@ -97,16 +109,18 @@ void *client_connect(void)
    if (str) {
 	  ret = ippp_parse(str, &addr);
 	  if (!ret) {
+		 config_kill(config);
 		 fprintf(stderr, "client_connect: configuration error: Server::Remote: %s\n", str);
-		 return 0;
+		 return NULL;
 	  }
    }
 
    else {
 	  str = config_fetch_by_name(config, "Server", "Filename");
 	  if ((str) && (!(*str))) {
+		 config_kill(config);
 		 fprintf(stderr, "client_connect: configuration error: Server::Filename\n");
-		 return 0;
+		 return NULL;
 	  }
 
 	  fl = strlen(str);
